--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "한국 기업의 ISO 인증 정보를 검색하는 웹 애플리케이션",
   "type": "module",
   "scripts": {
-    "build": "echo 'Functions only - no build needed'",
-    "dev": "netlify dev",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@netlify/functions": "^2.8.2",
+    "@tanstack/react-query": "^5.59.20",
     "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "drizzle-orm": "^0.36.4",
+    "lucide-react": "^0.454.0",
     "mysql2": "^3.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
