Implement hybrid GPT-4o-mini news analysis: instant response + background analysis with Korean/English support

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "cheerio": "^1.0.0",
     "drizzle-orm": "^0.36.4",
     "lucide-react": "^0.454.0",
-    "postgres": "^3.4.4",
+    "openai": "^6.7.0",
     "postcss": "^8.4.49",
+    "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.15",
@@ -44,4 +45,3 @@
     "node": ">=18.0.0"
   }
 }
-
